Github Pages works, removing debug

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="name">
         <p> H<span class="Ltr-Spacing">I,</span> I'M JACOB FRANK
             <br>A CREATIVE DEVELOPE<span class="Ltr-Spacing">R &amp;</span> DESIGNER </p>
-            <h6 style="font-size: calc(8px + 1vw);">Test This Site is currently being updated, something new will be here shortly.</h6>
+            <h6 style="font-size: calc(8px + 1vw);">This Site is currently being updated, something new will be here shortly.</h6>
     </div>
     <div class="stuff">
         <div class="links toplink">
