--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <title>Pulsating</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        * {
+          margin:0;
+          padding:0;
+        }
+
+        body {
+          width:100%;
+          height:100%;
+          overflow:hidden;
+        }
+    </style>
 </head>
 
 <body>
