--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -11,54 +11,104 @@
             margin: 0;
             padding: 0;
         }
+
         body {
             width: 100%;
             height: 100%;
             overflow: hidden;
         }
+
         .text {
-            margin-top: 40%;
+            height: 200vw;
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
+
         h2 {
             font-family: 'Oswald', sans-serif;
             font-size: 55px;
         }
+
         h6 {
             font-family: 'Roboto', sans-serif;
-            font-size: 22;
+            font-size: 26px;
         }
+
         canvas {
-            position:absolute;
-            top:0;
-            left:0;
-            width:100%;
-            height:100%;
-            z-index:-1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        #homepage {
+            width: 100vw;
+            height: 100vw;
+            overflow-x: auto;
+        }
+
+        .fluid-type14-26 {
+            font-size: 14px;
+        }
+
+        .fluid-type30-55 {
+            font-size: 29.6px;
+        }
+
+        @media screen and (min-width: 320px) {
+            .fluid-type14-26 {
+                font-size: calc( 14px + (26 - 14) * ( (100vw - 320px) / ( 1440 - 320)));
+            }
+            .fluid-type30-55 {
+                font-size: calc( 29.6px + (55 - 29.6) * ( (100vw - 320px) / ( 1440 - 320)));
+            }
+        }
+
+        @media screen and (min-width: 1440px) {
+            .fluid-type14-26 {
+                font-size: 26px;
+            }
+            .fluid-type30-55 {
+                font-size: 55px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div id="ball"></div>
-    <div class = "text">
-        <h2>JACOB FRANK</h2>
-        <h6>Developer and Designer</h6>
+    <div id="homepage" onscroll="getScrollPosition()">
+
+        <div class="text">
+            <h2 class="fluid-type30-55">JACOB FRANK</h2>
+            <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
+        </div>
+
     </div>
+    <div id="ball"></div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
+    <script src='https://threejs.org/examples/js/controls/TrackballControls.js'></script>
+
 
     <script>
         var scene, renderer, camera, mesh, geometry, lights = [];
         var wireframe = false,
             material;
+        var mouseX = mouseY = 20;
+        var windowHalfX = window.innerWidth / 2;
+        var windowHalfY = window.innerHeight / 2;
         // var flatten_modifier = 100;
+        var scrollPosition = 0;
+
         var phone = 35,
             tabletPortrait, size = 95,
             desktop = tabletLandscape = 76,
-            bigDesktop = 82, bigDesktopBlue = bigDesktop/2;
+            bigDesktop = 82,
+            bigDesktopBlue = bigDesktop / 2;
 
         var createIndexedSphereGeometry = function(width, length) {
             var geom = new THREE.BufferGeometry();
@@ -124,6 +174,7 @@
             renderer.setClearColor(0xf8f8f8, 1.0);
             renderer.autoClearColor = true;
             this.renderer.setSize(window.innerWidth, window.innerHeight);
+            document.addEventListener('mousemove', onDocumentMouseMove, false);
             document.getElementById("ball").appendChild(renderer.domElement);
 
             // My Light
@@ -142,9 +193,16 @@
         window.addEventListener('resize', onWindowResize, false);
 
         function onWindowResize() {
+            windowHalfX = window.innerWidth / 2;
+            windowHalfY = window.innerHeight / 2;
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+
+        function onDocumentMouseMove(event) { //Perspective turn
+            mouseX = (event.clientX + windowHalfX) * .5;
+            mouseY = (event.clientY + windowHalfY) * .5;
         }
 
         function rotateObject(object, degreeX = 0, degreeY = 0, degreeZ = 0) {
@@ -186,10 +244,10 @@
                 wireframe: wireframe
             });
             sphere = new THREE.Mesh(geometry, material);
-            sphere1 = new THREE.Mesh(geometry, material1);
+            // sphere1 = new THREE.Mesh(geometry, material1);
 
             mesh.add(sphere);
-            mesh.add(sphere1);
+            // mesh.add(sphere1);
 
             scene.add(mesh);
             animate();
@@ -239,26 +297,40 @@
                 mesh.scale.set(tabletLandscape, tabletLandscape, tabletLandscape);
             }
             if (window.innerWidth > 1200) {
-                desktop = (76 + (window.innerWidth - 1200) * .1);
+                desktop = (76 + (window.innerWidth - 1200) * .05);
                 mesh.scale.set(desktop, desktop, desktop);
             }
             if (window.innerWidth > 1800) {
                 mesh.scale.set(bigDesktop, bigDesktop, bigDesktop);
 
             }
-            sphere1.position.x = -1;
-            sphere1.position.y = -6;
-            sphere1.position.z = -3.5;
+            // sphere1.position.x = 3;
+            // sphere1.position.y = -6;
+            // sphere1.position.z = 3.5;
 
             scene.requestFrame = requestAnimationFrame(animate);
 
             modifyGeometry();
 
-            renderer.render(scene, camera);
+            render();
         }
 
-        var update = function() {
+        function getScrollPosition() {
+            var elmnt = document.getElementById("homepage");
+            // var x = elmnt.scrollLeft;
+            var y = elmnt.scrollTop;
+            console.log(y);
+            scrollPosition = y;
+        }
 
+        function render() {
+            // if (scrollPosition === 0) {
+            //     camera.position = 0;
+            // }
+            // else {
+                camera.position.y = -0.1 * scrollPosition;
+            // }
+            renderer.render(scene, camera);
         }
 
         init();
