--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Pulsating</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
+    <script src='https://threejs.org/examples/js/controls/TrackballControls.js'></script>
+    <script src="vendors/jquery.easings.min.js"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Oswald|Roboto');
         * {
@@ -17,9 +23,8 @@
             height: 100%;
             overflow: hidden;
         }
-
         .text {
-            height: 200vw;
+            height: 98vh;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -79,22 +84,24 @@
 </head>
 
 <body>
-    <div id="homepage" onscroll="getScrollPosition()">
-
-        <div class="text">
-            <h2 class="fluid-type30-55">JACOB FRANK</h2>
-            <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
+    <div id="fullpage" onscroll="getScrollPosition()">
+        <div class="section">
+            <div class="text">
+                <h2 class="fluid-type30-55">JACOB FRANK</h2>
+                <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
+            </div>
         </div>
-
+        <div class="section">
+            Section 2
+        </div>
     </div>
     <div id="ball"></div>
-
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
-    <script src='https://threejs.org/examples/js/controls/TrackballControls.js'></script>
-
-
     <script>
+        $('#fullpage').fullpage({anchors: ['page1', 'page2'],
+            // sectionsColor: ['yellow', 'orange'],
+        });
+        $.fn.fullpage.setScrollingSpeed(1200);
+
         var scene, renderer, camera, mesh, geometry, lights = [];
         var wireframe = false,
             material;
@@ -103,16 +110,13 @@
         var windowHalfY = window.innerHeight / 2;
         // var flatten_modifier = 100;
         var scrollPosition = 0;
-
-        var phone = 35,
+        var phone = 55,
             tabletPortrait, size = 95,
             desktop = tabletLandscape = 76,
-            bigDesktop = 82,
-            bigDesktopBlue = bigDesktop / 2;
+            bigDesktop = 82;
 
         var createIndexedSphereGeometry = function(width, length) {
             var geom = new THREE.BufferGeometry();
-
             var vertices = [];
             var indices = [];
             var uvs = [];
@@ -124,14 +128,12 @@
                     uvs.push(i / width, j / length);
                 }
             }
-
             for (var i = 0; i < width; i++) {
                 for (var j = 0; j < length; j++) {
                     var a = i * length1 + j;
                     var b = i * length1 + j + 1;
                     var c = (i + 1) * length1 + j;
                     var d = (i + 1) * length1 + j + 1;
-
                     indices.push(a, c, b);
                     indices.push(b, c, d);
                 }
@@ -185,7 +187,7 @@
 
             // My Camera
             camera = new THREE.PerspectiveCamera(40, window.innerWidth / window.innerHeight, 0.1, 1000);
-            camera.position.set(0, 0, 550);
+            camera.position.set(0, 8, 550);
             //   camera.setLens( flatten_modifier );
             //   camera.position.z = flatten_modifier * 9;
 
@@ -227,17 +229,20 @@
             geometry = createIndexedSphereGeometry(250, 250);
             main(geometry, 1);
 
+            var pink= new THREE.Color("rgb(229, 52, 85)");
+            var grey= new THREE.Color("rgb(221, 221, 221)");
+
             material = new THREE.MeshStandardMaterial({
                 color: 0xFFFFFF,
-                emissive: 0xE25046,
+                emissive: pink,
                 metalness: 1.0,
                 transparent: true,
                 opacity: 0.5,
                 wireframe: wireframe
             });
-            material1 = new THREE.MeshStandardMaterial({
+            materialGrey = new THREE.MeshStandardMaterial({
                 color: 0xFFFFFF,
-                emissive: 0x46D8E2,
+                emissive: grey,
                 metalness: 1.0,
                 transparent: true,
                 opacity: 0.5,
@@ -291,13 +296,16 @@
             if (window.innerWidth > 600) {
                 tabletPortrait = (55 + (window.innerWidth - 600) * .07);
                 mesh.scale.set(tabletPortrait, tabletPortrait, tabletPortrait);
+                if (window.innerWidth === 601) {
+                    console.log(tabletPortrait);
+                }
                 // prompt(tabletPortrait);
             }
             if (window.innerWidth > 900) {
                 mesh.scale.set(tabletLandscape, tabletLandscape, tabletLandscape);
             }
             if (window.innerWidth > 1200) {
-                desktop = (76 + (window.innerWidth - 1200) * .05);
+                desktop = (76 + (window.innerWidth - 1200) * .155);
                 mesh.scale.set(desktop, desktop, desktop);
             }
             if (window.innerWidth > 1800) {
@@ -324,12 +332,12 @@
         }
 
         function render() {
-            // if (scrollPosition === 0) {
-            //     camera.position = 0;
-            // }
-            // else {
-                camera.position.y = -0.1 * scrollPosition;
-            // }
+            if (scrollPosition === 0) {
+                camera.position.y = 8;
+            } else {
+                camera.position.y = -0.1 * scrollPosition + 8;
+            }
+            // sphere.material.emissive = shadeColor("#63C6FF", );
             renderer.render(scene, camera);
         }
 
