--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -53,6 +53,9 @@
                 <li>
                     <a href="assignments/conwayMod.html" target="_blank">ConwayMod</a>
                 </li>
+                <li>
+                    <a href="assignments/ICE1.html" target="_blank">ICE #1</a>
+                </li>
             </ul>
         </div>
     </div>
