Completed Reaction Diffusion

--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -56,6 +56,9 @@
                 <li>
                     <a href="assignments/ICE1.html" target="_blank">ICE #1</a>
                 </li>
+                <li>
+                    <a href="assignments/reactionDiffusion" target="_blank">Reaction Diffusion</a>
+                </li>
             </ul>
         </div>
     </div>
