--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -45,8 +45,20 @@
         <div>
             <h1 class="name">Jacob Frank</h1>
             <h1 class="subhead">IGME 590 Hompage</h1>
-            <p class="description">This is a place to hold all my assignments for IGME 590.</p>
+            <p class="description">This is a place to hold all my assignments for IGME 590. Assignments are displayed in most recent order.</p>
             <ul>
+                <li>
+                    <a href="assignments/system3" target="_blank">L-System Mod</a>
+                </li>
+                <li>
+                    <a href="assignments/system2" target="_blank">Complex L-System </a>
+                </li>
+                <li>
+                    <a href="assignments/system1" target="_blank">Simple L-System </a>
+                </li>
+                <li>
+                    <a href="assignments/reactionDiffusion" target="_blank">Reaction Diffusion</a>
+                </li>
                 <li>
                     <a href="assignments/conway.html" target="_blank">Conway</a>
                 </li>
@@ -55,9 +67,6 @@
                 </li>
                 <li>
                     <a href="assignments/ICE1.html" target="_blank">ICE #1</a>
-                </li>
-                <li>
-                    <a href="assignments/reactionDiffusion" target="_blank">Reaction Diffusion</a>
                 </li>
             </ul>
         </div>
