--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cellular Automata</title>
+    <title>Jacob Frank IGME 590</title>
     <!-- <script></script> -->
     <script src="https://use.typekit.net/oih0jze.js"></script>
     <script>
@@ -13,7 +13,6 @@
         } catch (e) {}
     </script>
     <meta charset="utf-8">
-    <title>Thought At Work</title>
     <meta name="description" content="IGME 590 Site">
     <meta name="author" content="Jacob Frank IGME 590">
 
@@ -41,11 +40,11 @@
         </div>
 
     </div>
-    <div class="content">
-        <div>
+    <div class="content__container">
+        <div class="content">
             <h1 class="name">Jacob Frank</h1>
-            <h1 class="subhead">IGME 590 Hompage</h1>
-            <p class="description">This is a place to hold all my assignments for IGME 590. Assignments are displayed in most recent order.</p>
+            <h1 class="subhead">IGME 590 Assignments</h1>
+            <p class="description">Displayed in most recent order.</p>
             <ul>
                 <li>
                     <a href="assignments/system3" target="_blank">L-System Mod</a>
