sped up animation

--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -319,8 +319,8 @@
         }
 
         let animate = function() {
-            time = time + .5;
-            // time++;
+            // time = time + .8;
+            time++;
 
             if (window.innerWidth < 599) {
                 mesh.scale.set(phone, phone, phone);
