fixed cancel animation for testing

--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -231,7 +231,7 @@
             windowHalfX = window.innerWidth / 2;
             windowHalfY = window.innerHeight / 2;
             if (window.innerWidth <= 1020) {
-                cancelAnimationFrame( cancel );
+                // cancelAnimationFrame( cancel );
             }
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
