Work in progress

--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -15,10 +15,15 @@
 
 <body>
     <div id="fullpage" onscroll="getScrollPosition()">
-        <div class="section">
+        <div class="section" id="homepage--background">
             <div class="text">
                 <h2 class="fluid-type30-55">JACOB FRANK</h2>
                 <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
+                <h6 class="progress">Website in Progress..</h6>
+                <div  class="ballGif">
+
+                    <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif">
+                </div>
             </div>
         </div>
         <div class="section">
@@ -26,7 +31,6 @@
         </div>
     </div>
     <div id="ball"></div>
-    <img src="http://thoughtatwork.cias.rit.edu/img/puls.gif" id="ball--fallBack">
     <script src='js/index.js'></script>
 
 </body>
