Finished in progress

--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -19,16 +19,25 @@
             <div class="text">
                 <h2 class="fluid-type30-55">JACOB FRANK</h2>
                 <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
-                <h6 class="progress">Website in Progress..</h6>
-                <div  class="ballGif">
-
+                <h6 class="progress">Website in Progress...</h6>
+                <div class="ballGif">
                     <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif">
+                </div>
+                <div class="nav" style="visibility: inherit; opacity: 1;">
+                    <div class="nav-left nav-transform">
+                        <div class="nav-about-wrapper">
+                            <h3 class="nav-about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf"> Resume</a> </h3>
+                        </div>
+                    </div>
+                    <div class="nav-mail-wrapper nav-transform-right nav-right">
+                        <h3 class="nav-mail">  <a href="mailto:hello@jacobdfrank.com?subject=Hello Jacob"> Email</a> </h3>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="section">
+        <!-- <div class="section">
             Case Studies
-        </div>
+        </div> -->
     </div>
     <div id="ball"></div>
     <script src='js/index.js'></script>
