--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="keywords" content="">
+    <meta name="description" content="Jacob Frank">
     <title>Pulsating</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
