fixed work in progress

--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -29,7 +29,7 @@
             <div class="text">
                 <h2 class="fluid-type30-55">JACOB FRANK</h2>
                 <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
-                <h6 class="progress">Website in Progress...</h6>
+                <h6 class="progress fluid-type22-40">Website in Progress...</h6>
                 <div class="ballGif">
                     <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif">
                 </div>
