First use of web audio api

--- a/school/IGME590/assignments/conwayMod.html
+++ b/school/IGME590/assignments/conwayMod.html
@@ -19,7 +19,7 @@ animals, as well as humans appear.
 
 <head>
     <title>Cellular Automata</title>
-    <script src='randomColor.js'></script>
+    <script src='./js/randomColor.js'></script>
     <style>
         * {
             margin: 0;
